# promptlab

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  app.py  bun.lockb  fly.toml  main.py  package.json  pyproject.toml  router.py
migrations/versions/: bce69f37ee0b_.py
models/: user.py
prompts/: prompt_manager.py
prompts/blueprints/: extract_video_summary.jinja2
prompts/projects/: evaluate_new_info_for_project.jinja2  software_analysis_workflow.jinja2  software_conception.jinja2
prompts/youtube/: compare_videos.jinja2  extract_video_summary.jinja2
routes/: auth.py  index.py
schemas/youtube/: compare_videos.py
static/: input.css  output.css
static/css/: input.css  output.css
static/js/: interactive-prompt.js
templates/: _macros.j2  base.j2  create_user.j2  index.j2  login.j2  users.j2
templates/prompts/: interactive.j2  multi_step.j2
